Update index.html to center div

--- a/index.html
+++ b/index.html
@@ -2,19 +2,34 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The fucking portal error page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Oops! It looks like our portal is currently down.</h1>
-    <h3>Our developer is on it. Or is sipping coctails on the beach. Or crying in the corner.</h3>
-    <p>Once she is back, she will definetely be on it. Stay tuned.</p>
-    <p>(for sure before the portal is approved. In March. 100%)</p>
-    <!--Alt attribute will be read by screenreader -->
-    <img src="images/girl_sipping_alcohol_beach.jpeg" alt="Young girl sipping coctail at the beach">
-    <!-- <a href="http://www.google.com">I AM A LINK TO <span>GOOGLE!!</span></a>
-    <a href="about.html">ABOUT PAGE</a> -->
+    <div class="container">
+        <h1>Oops! It looks like our portal is currently down.</h1>
+        <p>Our developer is on it. Or is sipping coctails on the beach. Or crying in the corner.</p>
+        <p>Once she is back, she will definetely be on it. For sure. 100%</p>
 
+        <!--Alt attribute will be read by screenreader -->
+        <img src="images/girl_sipping_alcohol_beach.jpeg" alt="Young girl sipping coctail at the beach">
+        <!-- <a href="http://www.google.com">I AM A LINK TO <span>GOOGLE!!</span></a>
+        <a href="about.html">ABOUT PAGE</a> -->
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
