--- a/index.html
+++ b/index.html
@@ -4370,7 +4370,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                             href="https://www.godaddy.com/websites/website-builder?isc=pwugc&amp;utm_source=wsb&amp;utm_medium=applications&amp;utm_campaign=en-gb_corp_applications_base"
                                                             data-typography="LinkAlpha"
                                                             class="x-el x-el-a c1-2f c1-2g c1-2h c1-2i c1-2j c1-di c1-2k c1-e7 c1-b c1-5c c1-3v c1-2q c1-5d c1-2s c1-48 c1-e8 c1-7d c1-49 c1-4a c1-4b"
-                                                            data-tccl="ux2.FOOTER.footer2.Layout.Default.Link.Default.92093.click,click">GoDaddy</a></span>
+                                                            data-tccl="ux2.FOOTER.footer2.Layout.Default.Link.Default.92093.click,click">TheNeedToLaugh</a></span>
                                                 </p>
                                             </div>
                                         </div>
