--- a/index.html
+++ b/index.html
@@ -3442,7 +3442,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                                 data-ux="NavLink" target=""
                                                                                 data-page="46c9a014-814a-4e68-9fab-f1f6ccc4d4c1"
                                                                                 data-edit-interactive="true"
-                                                                                href="/about-us"
+                                                                                href="error_page.html"
                                                                                 data-typography="NavAlpha"
                                                                                 class="x-el x-el-a c1-3s c1-2 c1-2h c1-2i c1-2j c1-t c1-2k c1-24 c1-q c1-4c c1-4d c1-4e c1-4f c1-2y c1-2w c1-2v c1-2x c1-3u c1-2p c1-3v c1-3w c1-3x c1-3y c1-3z c1-4g c1-41 c1-42 c1-43 c1-44 c1-4h c1-2z c1-30 c1-47 c1-48 c1-49 c1-4a c1-4b"
                                                                                 data-tccl="ux2.HEADER.header9.Nav.Default.Link.Default.92079.click,click">About
@@ -3502,7 +3502,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                                         data-page="46c9a014-814a-4e68-9fab-f1f6ccc4d4c1"
                                                                                         data-edit-interactive="true"
                                                                                         aria-labelledby="more-92077"
-                                                                                        href="/about-us"
+                                                                                        href="error_page.html"
                                                                                         data-typography="NavAlpha"
                                                                                         class="x-el x-el-a c1-3s c1-2 c1-2h c1-2i c1-2j c1-2t c1-2k c1-24 c1-q c1-5e c1-5f c1-5g c1-3u c1-2p c1-3v c1-3w c1-3x c1-3y c1-3z c1-4g c1-41 c1-42 c1-43 c1-44 c1-4h c1-2z c1-30 c1-47 c1-48 c1-49 c1-4a c1-4b"
                                                                                         data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Default.92083.click,click">About
@@ -3558,7 +3558,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                     data-ux="NavigationDrawerLink" target=""
                                                                     data-page="46c9a014-814a-4e68-9fab-f1f6ccc4d4c1"
                                                                     data-edit-interactive="true" data-close="true"
-                                                                    href="/about-us" data-typography="NavBeta"
+                                                                    href="error_page.html" data-typography="NavBeta"
                                                                     class="x-el x-el-a c1-3s c1-2 c1-2h c1-2i c1-2j c1-t c1-2k c1-6d c1-6e c1-1w c1-1x c1-24 c1-6f c1-33 c1-3u c1-5r c1-c c1-3w c1-5x c1-30 c1-6h c1-d c1-6i c1-e c1-f c1-g"
                                                                     data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Default.92085.click,click"><span>About
                                                                         us</span></a>
