--- a/error_page.html
+++ b/error_page.html
@@ -13,9 +13,10 @@
 <body>
     <div class="hero">
         <div class="container">
-            <h1>Oops! It looks like our portal is currently down.</h1>
+            <h1>Oops! It looks like this page is lost somewhere in the multiverse.</h1>
             <p>Our developer is on it. Or is sipping coctails on the beach. Or crying in the corner.</p>
             <p>Once she is back, she will definetely be on it. For sure. 100%</p>
+            <p>For now, please use the back button of your browser, as we were too lazy to make a back button...</p>
 
         </div>
     </div>
