--- a/index.html
+++ b/index.html
@@ -3732,7 +3732,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                             <img data-ux="Image" src="images/404_not_approved.jpeg"
                                                                 data-aid="ABOUT_IMAGE_RENDERED1" overlayAlpha="0"
                                                                 class="x-el x-el-img c1-1 c1-2 c1-4 c1-39 c1-37 c1-38 c1-26 c1-28 c1-4l c1-be c1-ac c1-s c1-6u c1-b c1-c c1-bf c1-d c1-e c1-f c1-g" />
-                                                            </picture>
+<!--                                                             </picture> -->
                                                         </span>
                                                     </div>
                                                 </div>
@@ -3779,7 +3779,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                 src="images/this_never_happened_the_most.jpeg"
                                                                 data-aid="ABOUT_IMAGE_RENDERED2" overlayAlpha="0"
                                                                 class="x-el x-el-img c1-1 c1-2 c1-4 c1-39 c1-37 c1-38 c1-26 c1-28 c1-4l c1-bg c1-ac c1-s c1-6u c1-b c1-c c1-bh c1-d c1-e c1-f c1-g" />
-                                                            </picture>
+<!--                                                             </picture> -->
                                                         </span>
                                                     </div>
                                                 </div>
@@ -3821,17 +3821,17 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                         class="x-el x-el-div c1-1 c1-2 c1-a9 c1-32 c1-b c1-c c1-d c1-7e c1-e c1-f c1-g">
                                                         <span data-ux="Element"
                                                             class="x-el x-el-span c1-1 c1-2 c1-b c1-c c1-d c1-e c1-f c1-g">
-                                                            <!-- <picture data-lazyimg="true" -->
-                                                            <!-- class="x-el x-el-picture c1-1 c1-2 c1-4 c1-5j c1-32 c1-aa c1-2a c1-b c1-c c1-d c1-e c1-f c1-g"> -->
-                                                            <!-- <source media="(max-width: 450px)" -->
-                                                            <!-- srcSet="//img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.23.51.jpeg/:/rs=w:403,cg:true,m, //img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.23.51.jpeg/:/rs=w:675,cg:true,m 2x" /> -->
-                                                            <!-- <source media="(min-width: 451px)" -->
-                                                            <!-- srcSet="//img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.23.51.jpeg/:/rs=w:600,cg:true,m, //img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.23.51.jpeg/:/rs=w:675,cg:true,m 2x" /> -->
-                                                            <!-- <img data-ux="Image" -->
-                                                            <!-- src="//img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.23.51.jpeg/:/rs=w:600,cg:true,m" -->
-                                                            <!-- data-aid="ABOUT_IMAGE_RENDERED3" overlayAlpha="0" -->
-                                                            <!-- class="x-el x-el-img c1-1 c1-2 c1-4 c1-39 c1-37 c1-38 c1-26 c1-28 c1-4l c1-bi c1-ac c1-s c1-6u c1-b c1-c c1-bj c1-d c1-e c1-f c1-g" /> -->
-                                                            <!-- </picture> -->
+                                                            <!-- <picture data-lazyimg="true"
+                                                                class="x-el x-el-picture c1-1 c1-2 c1-4 c1-5j c1-32 c1-aa c1-2a c1-b c1-c c1-d c1-e c1-f c1-g">
+                                                                <source media="(max-width: 450px)"
+                                                                    srcSet="//img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.21.23.jpeg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:403,cg:true, //img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.21.23.jpeg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:806,cg:true 2x, //img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.21.23.jpeg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1080,cg:true 3x" />
+                                                                <source media="(min-width: 451px)"
+                                                                    srcSet="//img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.21.23.jpeg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:600,cg:true, //img1.wsimg.com/isteam/ip/c23ee6dc-6b6a-4462-90dd-a0b5905c4d79/WhatsApp%20Image%202024-01-12%20at%2012.21.23.jpeg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1080,cg:true 2x" /> -->
+                                                            <img data-ux="Image"
+                                                                src="images/the_fucking_portal_in_gold.jpeg"
+                                                                data-aid="ABOUT_IMAGE_RENDERED2" overlayAlpha="0"
+                                                                class="x-el x-el-img c1-1 c1-2 c1-4 c1-39 c1-37 c1-38 c1-26 c1-28 c1-4l c1-bg c1-ac c1-s c1-6u c1-b c1-c c1-bh c1-d c1-e c1-f c1-g" />
+<!--                                                             </picture> -->
                                                         </span>
                                                     </div>
                                                 </div>
