--- a/index.html
+++ b/index.html
@@ -4073,14 +4073,14 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                     This site is protected by reCAPTCHA and the Google
                                                                     <a rel="noopener" role="link" aria-haspopup="true"
                                                                         data-ux="Link" target="_blank"
-                                                                        href="https://policies.google.com/privacy"
+                                                                        href="privacy_policy.html"
                                                                         data-typography="LinkAlpha"
                                                                         class="x-el x-el-a c1-2f c1-2g c1-2h c1-2i c1-2j c1-di c1-2k c1-b c1-df c1-dk c1-2q c1-dg c1-dh c1-dl c1-dm c1-dn c1-do"
                                                                         data-tccl="ux2.CONTACT.contact2.Form.Default.Link.Default.92090.click,click">Privacy
                                                                         Policy</a> and <a rel="noopener" role="link"
                                                                         aria-haspopup="true" data-ux="Link"
                                                                         target="_blank"
-                                                                        href="https://policies.google.com/terms"
+                                                                        href="privacy_policy.html"
                                                                         data-typography="LinkAlpha"
                                                                         class="x-el x-el-a c1-2f c1-2g c1-2h c1-2i c1-2j c1-di c1-2k c1-b c1-df c1-dk c1-2q c1-dg c1-dh c1-dl c1-dm c1-dn c1-do"
                                                                         data-tccl="ux2.CONTACT.contact2.Form.Default.Link.Default.92091.click,click">Terms
