--- a/index.html
+++ b/index.html
@@ -4383,7 +4383,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                         <li style="display:inline-block"><a rel="" role="link" aria-haspopup="false"
                                                 data-ux="NavFooterLink" data-page="828ceb40-4697-47d9-be22-08405d75754a"
                                                 target="" data-aid="FOOTER_PAGE_LINK_0_RENDERED"
-                                                data-edit-interactive="true" href="/privacy-policy"
+                                                data-edit-interactive="true" href="/privacy_policy"
                                                 data-typography="NavAlpha"
                                                 class="x-el x-el-a c1-3s c1-2 c1-2h c1-2i c1-2j c1-2t c1-2k c1-8n c1-8o c1-34 c1-35 c1-3u c1-2p c1-3v c1-3w c1-2z c1-30 c1-47 c1-ed c1-ee c1-48 c1-49 c1-4a c1-4b"
                                                 data-tccl="ux2.FOOTER.footer2.Nav.Footer.Link.Default.92094.click,click">Privacy
