--- a/error_page.html
+++ b/error_page.html
@@ -14,12 +14,16 @@
     <div class="hero">
         <div class="container">
             <h1>Oops! It looks like this page is lost somewhere in the multiverse.</h1>
-            <p>Our developer is on it. Or is sipping coctails on the beach. Or crying in the corner.</p>
-            <p>Once she is back, she will definetely be on it. For sure. 100%</p>
-            <p>For now, please use the back button of your browser, as we were too lazy to make a back button...</p>
-
-        </div>
+            <p id="white_paragraph">Our developer is on it. Or is sipping coctails on the beach. Or crying in the corner.</p>
+            <p id="white_paragraph">Once she is back, she will definetely be on it. For sure. 100%</p>
+            <p id="white_paragraph">For now, please use the back button of your browser, as we were too lazy to make one...</p>
+            <a href="index.html">
+                <button class="button_primary">FINE. You can go back to the magnificent portal</button>
+            </a>
+        </div> 
     </div>
+
+
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
