--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -120,7 +120,7 @@
 
         <h2>Contact Us</h2>
 
-        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</p>
+        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us (if you can figure out how) .</p>
     </div>
 </body>
 
