--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
         }
 
         .x .c1-7z {
-            color: rgb(255, 255, 255)
+            color: #ffffff
         }
 
         .x .c1-80 {
